# deepstream-pipeline-template

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
config/: app-config copy.yml  app-config.yml  config.yaml  ds-app-configl.yaml  pgie-config copy.yml  pgie-config.txt  pgie-config.yml  playload_schema.yaml
include/: user-data.h
src/: main copy.cpp  main.cpp
src/common/: gst-tools.cpp  gst-tools.h  string-tools.cpp  string-tools.h  tools.cpp  tools.h  yaml-tools.cpp  yaml-tools.h
src/engine/: BaseBinFactory.h  BrokerBinFactory.cpp  BrokerBinFactory.h  IBinFactory.h  InferBinFactory.cpp  InferBinFactory.h  PiplineFactory.cpp  PiplineFactory.h  RegisteredFactories.cpp  RegisteredFactories.h  RenderBinFactory.cpp  RenderBinFactory.h  SinkBinFactory.cpp  SinkBinFactory.h  SourceBinFactory.cpp  SourceBinFactory.h
src/engine/broker/: BrokerBinFactory.cpp  BrokerBinFactory.h
src/engine/infer/: InferBinFactory.cpp  InferBinFactory.h
src/engine/pipeline/: PiplineFactory.cpp  PiplineFactory.h
src/engine/render/: RenderBinFactory.cpp  RenderBinFactory.h
src/engine/sink/: SinkBinFactory.cpp  SinkBinFactory.h
src/engine/source/: SourceBinFactory.h
src/msgconv-generator/: CMakeLists.txt  msg-generator.cpp  msg-generator.h
src/tests/: ContextFactoryTests.cpp  InferBinFactoryTests.cpp  SinkBinFactoryTests.cpp  SourceBinFactoryTests.cpp  string-tools-test.cpp
